--- a/src/web/inat-life-list/package.json
+++ b/src/web/inat-life-list/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@tanstack/react-query": "^5.75.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
